Ensured backwards compatibility of location
