# public/api-spec-v1.yaml
@@ -1341,6 +1341,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/HolidayOpeningHours-resource'
+        location:
+          type: string
         resourceMail:
           type: string
         resourceName:
@@ -1465,6 +1467,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/HolidayOpeningHours.jsonld-resource'
+        location:
+          type: string
         resourceMail:
           type: string
         resourceName:
